package quests;

public class Monster {
    private String name;
    private float health;
    private float strength;
    private float armour;
}
