@startuml AdventuresGuild_Final
skinparam defaultFontName "JetBrains Mono"

enum Condition {
  NEW
  USED
  DAMAGED
  BROKEN
  --
  - powerMultiplier: float
  - minDurability: int
  ..
  + Condition(powerMultiplier: float, minDurability: int)
  + {static} fromDurability(durability: int): Condition
  + getPowerMultiplier(): float
  + getMinDurability(): int
}

note bottom of Condition
  public static Condition fromDurability(int durability) {
    for (Condition c : values()) {
      if (dur >= c.minDurability) return c;
    }
    return BROKEN;
  }
end note

' --- Interfaces with Default Behavior ---

interface MeleeAttack {
  + strike(target: Monster): void
}
note left of MeleeAttack::strike
  default void strike(Monster target) {
    target.takeDamage(10.0f, false);
    System.out.println("Melee strike landed!");
  }
end note

interface RangedAttack {
  + shoot(target: Monster): void
}
note right of RangedAttack::shoot
  default void shoot(Monster target) {
    target.takeDamage(8.0f, false);
    System.out.println("Arrow fired!");
  }
end note

interface MagicalAttack {
  + castSpell(target: Monster): void
}
note right of MagicalAttack::castSpell
  default void castSpell(Monster target) {
    target.takeDamage(12.0f, true); // Bypasses armor
    System.out.println("Spell cast!");
  }
end note

abstract class Weapon {
  # name: String
  # basePower: float
  # durability: int = 100
  # condition: Condition = Condition.NEW
  --
  + {abstract} performAttack(target: Monster): void
  + reduceDurability(amount: int): void
  + getEffectivePower(): float
  + isBroken(): boolean
  + getName(): String
  + setName(name: String): void
  + getBasePower(): float
  + setBasePower(basePower: float): void
  + getDurability(): int
  + setDurability(durability: int): void
  + getCondition(): Condition
  + setCondition(state: Condition): void
}

note left of Weapon::reduceDurability
  this.durability -= amount;
  if (durability < 0) durability = 0;
  this.state = Condition.fromDurability(this.durability);
end note

' --- Concrete Classes ---

class Sword extends Weapon implements MeleeAttack {
  + performAttack(target: Monster): void
}
class Bow extends Weapon implements RangedAttack {
  + performAttack(target: Monster): void
}
class Staff extends Weapon implements MagicalAttack {
  + performAttack(target: Monster): void
}

' --- World Classes ---

class Monster {
  - name: String
  - health: float
  - strength: float
  - armor: float
  --
  + takeDamage(amount: float, bypassArmor: boolean): void
  + attack(a: Adventurer): void
  + getName(): String
  + setName(name: String): void
  + getHealth(): float
  + setHealth(health: float): void
  + getStrength(): float
  + setStrength(strength: float): void
  + getArmor(): float
  + setArmor(armor: float): void
}

class Adventurer {
  - name: String
  - basePower: float
  - health: float
  - experience: int
  - rank: int
  - inventory: List<Weapon>
  --
  + attack(m: Monster): void
  + takeDamage(amount: float): void
  + getStrongestWeapon(): Weapon
  + gainExperience(amount: int): void
  + getName(): String
  + setName(name: String): void
  + getBasePower(): float
  + setBasePower(basePower: float): void
  + getHealth(): float
  + setHealth(health: float): void
  + getExperience(): int
  + setExperience(experience: int): void
  + getRank(): int
  + setRank(rank: int): void
  + getInventory(): List<Weapon>
  + setInventory(inventory: List<Weapon>): void
}

class Quest {
  - name: String
  - difficulty: int
  - isComplete: boolean
  - monsters: List<Monster>
  --
  + attemptQuest(a: Adventurer): boolean
  + getName(): String
  + setName(name: String): void
  + getDifficulty(): int
  + setDifficulty(difficulty: int): void
  + isComplete(): boolean
  + setComplete(isComplete: boolean): void
  + getMonsters(): List<Monster>
  + setMonsters(monsters: List<Monster>): void
}

class Guild {
  - members: List<Adventurer>
  - quests: List<Quest>
  --
  + assignRandomQuest(): void
  + addMember(a: Adventurer): void
  + addQuest(q: Quest): void
  + getMembers(): List<Adventurer>
  + setMembers(members: List<Adventurer>): void
  + getQuests(): List<Quest>
  + setQuests(quests: List<Quest>): void
}

Weapon *-down- Condition
Adventurer "1" o-- "*" Weapon : "Inventory"
Quest "1" *-- "*" Monster : "Enemies"
Guild "1" o-- "*" Adventurer : "Members"
Guild "1" o-- "*" Quest : "Board"

@enduml